--- a/Sprint4/topik1/data.html
+++ b/Sprint4/topik1/data.html
@@ -7,17 +7,21 @@
 </head>
 <body>
     <form method="POST" action="action.php">
-        <input type="text" name="nama_barang" placeholder="nama_barang">
-        <input type="text" name="harga_barang" placeholder="harga_barang">
-        <input type="submit" value="submit">
+    <table>
+        <tr><td><input type="text" name="nama_barang" placeholder="nama_barang"></td></tr>
+        <tr><td><input type="text" name="harga_barang" placeholder="harga_barang"></td></tr>
+        <tr><td><input type="submit" value="submit"></td></tr>
+    </table>
     </form>
     <br>
     <form method="GET" action="action.php">
-        <input type="text" name="nama_kurir" placeholder="nama_kurir">
-        <input type="text" name="nama_pengirim" placeholder="nama_pengirim">
-        <input type="text" name="asal_barang" placeholder="asal_barang">
-        <input type="text" name="tujuan_barang" placeholder="tujuan_barang">
-        <input type="submit" value="submit">
+        <table>
+            <tr><td><input type="text" name="nama_kurir" placeholder="nama_kurir"></td></tr>
+            <tr><td><input type="text" name="nama_pengirim" placeholder="nama_pengirim"></td></tr>
+            <tr><td><input type="text" name="asal_barang" placeholder="asal_barang"></td></tr>
+            <tr><td><input type="text" name="tujuan_barang" placeholder="tujuan_barang"></td></tr>
+            <tr><td><input type="submit" value="submit"></td></tr>
+            </table>
     </form>
     <br>
 </body>
